- added footer with the used ng2-archwizard version

--- a/src/app/pizza.component.html
+++ b/src/app/pizza.component.html
@@ -138,3 +138,7 @@
   <button type="button" (click)="reset();">Reset wizard</button>
 </div>
 
+<footer>
+  This demo uses ng2-archwizard version 1.3.0
+</footer>
+
