- changed navigationLayout to navBarLayout

--- a/src/app/pizza.component.html
+++ b/src/app/pizza.component.html
@@ -32,7 +32,7 @@
   </div>
 
   <wizard [navBarLocation]="navBarLocation"
-          [navigationLayout]="navigationLayout"
+          [navBarLayout]="navigationLayout"
           [ngClass]="{
     'width-100': navBarWidth == 'width-100',
     'width-90': navBarWidth == 'width-90',
