- renamed large-symbols to large-empty-symbols - added large-filled-symbols

--- a/src/app/pizza.component.html
+++ b/src/app/pizza.component.html
@@ -26,8 +26,9 @@
     <select id="navigationLayout" [(ngModel)]="navigationLayout">
       <option value="small">Small/Default</option>
       <option value="large-filled">Large-filled</option>
+      <option value="large-filled-symbols">Large-filled-symbols</option>
       <option value="large-empty">Large-empty</option>
-      <option value="large-symbols">Large-symbols</option>
+      <option value="large-empty-symbols">Large-empty-symbols</option>
     </select>
   </div>
 
