--- a/src/app/pizza.component.css
+++ b/src/app/pizza.component.css
@@ -1,5 +1,8 @@
-* li::after {
-  font-family: FontAwesome;
+:host {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .width-50 {
@@ -34,4 +37,10 @@
 
 .bordered {
   border-style: solid;
+}
+
+.centered {
+  margin: 0 auto;
+  text-align: center;
+  display: block;
 }
