- added a method to check if the wizard is currently showing the completed step

--- a/src/app/pizza.component.html
+++ b/src/app/pizza.component.html
@@ -32,7 +32,7 @@
     </select>
 
     <label for="showCompletionStep">Show completion step:</label>
-    <input type="checkbox" id="showCompletionStep" name="showCompletionStep" [(ngModel)]="showCompletionStep">
+    <input type="checkbox" id="showCompletionStep" name="showCompletionStep" [(ngModel)]="showCompletionStep" [disabled]="insideCompletionStep">
   </div>
 
   <hr style="margin: 10px;">
