- changed the symbol in the navbar for the completion step to a checkmark

--- a/src/app/pizza.component.html
+++ b/src/app/pizza.component.html
@@ -115,7 +115,7 @@
         <button type="button" (click)="deliver();">Deliver my pizza! (Leave wizard)</button>
       </div>
     </wizard-step>
-    <wizard-completion-step *ngIf="showCompletionStep" title="Delivered" navigationSymbol='&#xf1ba;' navigationSymbolFontFamily="FontAwesome">
+    <wizard-completion-step *ngIf="showCompletionStep" title="Delivered" navigationSymbol='&#xf00c;' navigationSymbolFontFamily="FontAwesome">
       <div class="centered">
         <table class="centered">
           <tr>
