- added a color definition, to better illustrate the wizardStepTitle directive

--- a/src/app/pizza.component.html
+++ b/src/app/pizza.component.html
@@ -91,7 +91,7 @@
     </wizard-step>
     <wizard-step navigationSymbol='&#xf1ba;' navigationSymbolFontFamily="FontAwesome">
       <ng-template wizardStepTitle>
-        <span class="hidden-sm-down">Delivery address</span>
+        <span class="hidden-sm-down" style="color:red;">Delivery address</span>
         <span class="hidden-md-up">Address</span>
       </ng-template>
       <div class="centered">
