- fix a bug with the css of the custom-step-component, that didn't set the width of the component to 100% - add a demo for the canExit input of the wizard steps

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -83,6 +83,9 @@
               <li routerLink="/step-event/step-exit" routerLinkActive="active">
                 <a>On exiting a step</a>
               </li>
+              <li routerLink="/step-event/can-exit" routerLinkActive="active">
+                <a>Can exit a step</a>
+              </li>
             </ul>
 
             <li routerLink="/custom-step-titles" routerLinkActive="active">
