--- a/src/app/wizard-step-directives/wizard-step-directives.component.html
+++ b/src/app/wizard-step-directives/wizard-step-directives.component.html
@@ -19,7 +19,7 @@
 
       <div class="btn-group">
         <button type="button" class="btn btn-secondary" previousStep>Back</button>
-        <button type="button" class="btn btn-secondary" (click)="wizard.reset()">Reset</button>
+        <button type="button" class="btn btn-secondary" (click)="wizard.navigation.reset()">Reset</button>
       </div>
     </div>
   </wizard-step>
