--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -88,6 +88,21 @@
               </li>
             </ul>
 
+            <li data-toggle="collapse" data-target="#navigationModes" class="collapsed">
+              <a>Navigation modes<span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu" id="navigationModes" [ngClass]="{ 'collapse': !isInFunction('navigation-mode') }">
+              <li routerLink="/navigation-mode/strict" routerLinkActive="active">
+                <a>Strict navigation mode (Default)</a>
+              </li>
+              <li routerLink="/navigation-mode/semi-strict" routerLinkActive="active">
+                <a>Semi-strict navigation mode</a>
+              </li>
+              <li routerLink="/navigation-mode/free" routerLinkActive="active">
+                <a>Free navigation mode</a>
+              </li>
+            </ul>
+
             <li routerLink="/custom-step-titles" routerLinkActive="active">
               <a>Custom designed step titles</a>
             </li>
