--- a/src/app/reset-wizard/reset-wizard.component.html
+++ b/src/app/reset-wizard/reset-wizard.component.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" (click)="wizard.reset()">Reset</button>
+        <button type="button" class="btn btn-secondary" (click)="wizard.navigation.reset()">Reset</button>
       </div>
     </div>
   </wizard-step>
