- add an example for the canEnter wizard step input

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -83,6 +83,9 @@
               <li routerLink="/step-event/step-exit" routerLinkActive="active">
                 <a>On exiting a step</a>
               </li>
+              <li routerLink="/step-event/can-enter" routerLinkActive="active">
+                <a>Can enter a step</a>
+              </li>
               <li routerLink="/step-event/can-exit" routerLinkActive="active">
                 <a>Can exit a step</a>
               </li>
