- fix canEnter example texts

--- a/src/app/can-enter-event/can-enter-event.component.html
+++ b/src/app/can-enter-event/can-enter-event.component.html
@@ -7,7 +7,7 @@
 
       <div class="checkbox">
         <input id="canExitStep1" type="checkbox" [(ngModel)]="canEnterStep1"/>
-        <label for="canExitStep1">Allow exiting step 1</label>
+        <label for="canExitStep1">Allow entering step 1</label>
       </div>
 
       <div class="btn-group">
@@ -23,12 +23,12 @@
 
       <div class="checkbox">
         <input id="canExitStep2Backwards" type="checkbox" [(ngModel)]="canEnterStep2Backwards"/>
-        <label for="canExitStep2Backwards">Allow exiting step 2 backwards</label>
+        <label for="canExitStep2Backwards">Allow entering step 2 backwards</label>
 
         <br>
 
         <input id="canExitStep2Forwards" type="checkbox" [(ngModel)]="canEnterStep2Forwards"/>
-        <label for="canExitStep2Forwards">Allow exiting step 2 forwards</label>
+        <label for="canExitStep2Forwards">Allow entering step 2 forwards</label>
       </div>
 
       <div class="btn-group">
@@ -45,7 +45,7 @@
 
       <div class="checkbox">
         <input id="canExitStep3" type="checkbox" [(ngModel)]="canEnterStep3"/>
-        <label for="canExitStep3">Allow exiting step 3</label>
+        <label for="canExitStep3">Allow entering step 3</label>
       </div>
 
       <div class="btn-group">
