- add an example for the selected directive

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -114,6 +114,10 @@
               <a>Optional steps</a>
             </li>
 
+            <li routerLink="/default-step-index" routerLinkActive="active">
+              <a>Default wizard step / Initial wizard step</a>
+            </li>
+
             <li routerLink="/arbitrary-step-navigation" routerLinkActive="active">
               <a>Navigate to an arbitrary step</a>
             </li>
