- change title to stepTitle

--- a/src/app/can-enter-event/can-enter-event.component.html
+++ b/src/app/can-enter-event/can-enter-event.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard>
-  <wizard-step title="Steptitle 1" [canEnter]="canEnterStep1">
+  <wizard-step stepTitle="Steptitle 1" [canEnter]="canEnterStep1">
     <div class="centered-content">
       <div>
         Content: Step 1
@@ -15,7 +15,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 2" [canEnter]="canEnterStep2">
+  <wizard-step stepTitle="Steptitle 2" [canEnter]="canEnterStep2">
     <div class="centered-content">
       <div>
         Content: Step 2
@@ -37,7 +37,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 3" [canEnter]="canEnterStep3">
+  <wizard-step stepTitle="Steptitle 3" [canEnter]="canEnterStep3">
     <div class="centered-content">
       <div>
         Content: Step 3
