--- a/src/app/custom-step-titles/custom-step-titles.component.html
+++ b/src/app/custom-step-titles/custom-step-titles.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard>
-  <wizard-step title="Steptitle 1">
+  <wizard-step stepTitle="Steptitle 1">
     <ng-template wizardStepTitle>
       Steptitle 1
     </ng-template>
@@ -14,7 +14,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 2">
+  <wizard-step stepTitle="Steptitle 2">
     <ng-template wizardStepTitle>
       <span class="d-none d-md-block" style="color:red;">Steptitle 2</span>
       <span class="d-md-none">Title 2</span>
@@ -31,7 +31,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 3">
+  <wizard-step stepTitle="Steptitle 3">
     <ng-template wizardStepTitle>
       Steptitle 3
     </ng-template>
