--- a/src/app/step-exit-event/step-exit-event.component.html
+++ b/src/app/step-exit-event/step-exit-event.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard>
-  <wizard-step title="Steptitle 1" (stepExit)="increaseCounter1($event)">
+  <wizard-step stepTitle="Steptitle 1" (stepExit)="increaseCounter1($event)">
     <div class="centered-content">
       <div>
         You've exited the first step {{counter1}} times!
@@ -10,7 +10,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 2" (stepExit)="increaseCounter2($event)">
+  <wizard-step stepTitle="Steptitle 2" (stepExit)="increaseCounter2($event)">
     <div class="centered-content">
       <div>
         You've exited the second step {{counter2}} times!
@@ -22,7 +22,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 3" (stepExit)="increaseCounter3($event)">
+  <wizard-step stepTitle="Steptitle 3" (stepExit)="increaseCounter3($event)">
     <div class="centered-content">
       <div>
         You've exited the third step {{counter3}} times!
