--- a/src/app/large-filled/large-filled.component.html
+++ b/src/app/large-filled/large-filled.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard navBarLayout="large-filled">
-  <wizard-step title="Steptitle 1">
+  <wizard-step stepTitle="Steptitle 1">
     <div class="centered-content">
       <div>
         Content: Step 1
@@ -10,7 +10,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 2">
+  <wizard-step stepTitle="Steptitle 2">
     <div class="centered-content">
       <div>
         Content: Step 2
@@ -22,7 +22,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 3">
+  <wizard-step stepTitle="Steptitle 3">
     <div class="centered-content">
       <div>
         Content: Step 3
