--- a/src/app/strict-navigation-mode/strict-navigation-mode.component.html
+++ b/src/app/strict-navigation-mode/strict-navigation-mode.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard navigationMode="strict">
-  <wizard-step title="Steptitle 1">
+  <wizard-step stepTitle="Steptitle 1">
     <div class="centered-content">
       <div>
         Content: Step 1
@@ -10,7 +10,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 2">
+  <wizard-step stepTitle="Steptitle 2">
     <div class="centered-content">
       <div>
         Content: Step 2
@@ -22,7 +22,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 3">
+  <wizard-step stepTitle="Steptitle 3">
     <div class="centered-content">
       <div>
         Content: Step 3
@@ -34,7 +34,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-completion-step title="Completion steptitle">
+  <wizard-completion-step stepTitle="Completion steptitle">
     <div class="centered-content">
       <div>
         Completion step content
