--- a/src/app/wizard-step-directives/wizard-step-directives.component.html
+++ b/src/app/wizard-step-directives/wizard-step-directives.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard>
-  <wizard-step title="Steptitle 1">
+  <wizard-step stepTitle="Steptitle 1">
     <div class="centered-content">
       <div>
         Content: Step 1
@@ -10,8 +10,8 @@
       </div>
     </div>
   </wizard-step>
-  <app-custom-step-component wizardStep title="Steptitle 2"></app-custom-step-component>
-  <wizard-step title="Steptitle 3">
+  <app-custom-step-component wizardStep stepTitle="Steptitle 2"></app-custom-step-component>
+  <wizard-step stepTitle="Steptitle 3">
     <div class="centered-content">
       <div>
         Content: Step 3
