- switch (click) binding to resetWizard directive

--- a/src/app/optional-steps/optional-steps.component.html
+++ b/src/app/optional-steps/optional-steps.component.html
@@ -42,7 +42,7 @@
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" (click)="wizard.navigation.reset()">Reset</button>
+        <button type="button" class="btn btn-secondary" resetWizard>Reset</button>
       </div>
     </div>
   </wizard-completion-step>
