--- a/src/app/arbitrary-step-navigation/arbitrary-step-navigation.component.html
+++ b/src/app/arbitrary-step-navigation/arbitrary-step-navigation.component.html
@@ -30,7 +30,7 @@
 
       <div class="btn-group">
         <button type="button" class="btn btn-secondary" [goToStep]="secondStep">Back</button>
-        <button type="button" class="btn btn-secondary" (click)="wizard.navigation.reset()">Reset</button>
+        <button type="button" class="btn btn-secondary" resetWizard>Reset</button>
       </div>
     </div>
   </wizard-step>
