Change demo application to be compatible with ng2-archwizard version 2.0.0 (#9)
- add demos for the new navigation modes
- change the reset calls to work with the new dev build
- add an example for the canEnter wizard step input
- fix canEnter example texts
- add an example for the selected directive
- change title to stepTitle
- change WizardModule to ArchwizardModule
- improve reset demo
- switch (click) binding to resetWizard directive
- add release of ng2-archwizard as a dependency

--- a/src/app/custom-step-symbol/custom-step-symbol.component.html
+++ b/src/app/custom-step-symbol/custom-step-symbol.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard navBarLayout="large-empty-symbols">
-  <wizard-step title="Steptitle 1" navigationSymbol="&#xf0b1;" navigationSymbolFontFamily="FontAwesome">
+  <wizard-step stepTitle="Steptitle 1" navigationSymbol="&#xf0b1;" navigationSymbolFontFamily="FontAwesome">
     <div class="centered-content">
       <div>
         Content: Step 1
@@ -10,7 +10,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 2" navigationSymbol="&#xf085;" navigationSymbolFontFamily="FontAwesome">
+  <wizard-step stepTitle="Steptitle 2" navigationSymbol="&#xf085;" navigationSymbolFontFamily="FontAwesome">
     <div class="centered-content">
       <div>
         Content: Step 2
@@ -22,7 +22,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 3" navigationSymbol="&#xf00c;" navigationSymbolFontFamily="FontAwesome">
+  <wizard-step stepTitle="Steptitle 3" navigationSymbol="&#xf00c;" navigationSymbolFontFamily="FontAwesome">
     <div class="centered-content">
       <div>
         Content: Step 3
@@ -30,7 +30,7 @@
 
       <div class="btn-group">
         <button type="button" class="btn btn-secondary" previousStep>Back</button>
-        <button type="button" class="btn btn-secondary" (click)="wizard.reset()">Reset</button>
+        <button type="button" class="btn btn-secondary" resetWizard>Reset</button>
       </div>
     </div>
   </wizard-step>
