--- a/src/app/can-exit-event/can-exit-event.component.html
+++ b/src/app/can-exit-event/can-exit-event.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard>
-  <wizard-step title="Steptitle 1" [canExit]="canExitStep1">
+  <wizard-step stepTitle="Steptitle 1" [canExit]="canExitStep1">
     <div class="centered-content">
       <div>
         Content: Step 1
@@ -15,7 +15,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 2" [canExit]="canExitStep2">
+  <wizard-step stepTitle="Steptitle 2" [canExit]="canExitStep2">
     <div class="centered-content">
       <div>
         Content: Step 2
@@ -37,7 +37,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 3" [canExit]="canExitStep3">
+  <wizard-step stepTitle="Steptitle 3" [canExit]="canExitStep3">
     <div class="centered-content">
       <div>
         Content: Step 3
@@ -50,7 +50,7 @@
 
       <div class="btn-group">
         <button type="button" class="btn btn-secondary" previousStep>Back</button>
-        <button type="button" class="btn btn-secondary" (click)="wizard.reset()">Reset</button>
+        <button type="button" class="btn btn-secondary" resetWizard>Reset</button>
       </div>
     </div>
   </wizard-step>
