--- a/src/app/custom-step-titles/custom-step-titles.component.html
+++ b/src/app/custom-step-titles/custom-step-titles.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard>
-  <wizard-step title="Steptitle 1">
+  <wizard-step stepTitle="Steptitle 1">
     <ng-template wizardStepTitle>
       Steptitle 1
     </ng-template>
@@ -14,10 +14,10 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 2">
+  <wizard-step stepTitle="Steptitle 2">
     <ng-template wizardStepTitle>
-      <span class="hidden-sm-down" style="color:red;">Steptitle 2</span>
-      <span class="hidden-md-up">Title 2</span>
+      <span class="d-none d-md-block" style="color:red;">Steptitle 2</span>
+      <span class="d-md-none">Title 2</span>
     </ng-template>
 
     <div class="centered-content">
@@ -31,7 +31,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 3">
+  <wizard-step stepTitle="Steptitle 3">
     <ng-template wizardStepTitle>
       Steptitle 3
     </ng-template>
@@ -43,7 +43,7 @@
 
       <div class="btn-group">
         <button type="button" class="btn btn-secondary" previousStep>Back</button>
-        <button type="button" class="btn btn-secondary" (click)="wizard.reset()">Reset</button>
+        <button type="button" class="btn btn-secondary" resetWizard>Reset</button>
       </div>
     </div>
   </wizard-step>
