--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -83,8 +83,26 @@
               <li routerLink="/step-event/step-exit" routerLinkActive="active">
                 <a>On exiting a step</a>
               </li>
+              <li routerLink="/step-event/can-enter" routerLinkActive="active">
+                <a>Can enter a step</a>
+              </li>
               <li routerLink="/step-event/can-exit" routerLinkActive="active">
                 <a>Can exit a step</a>
+              </li>
+            </ul>
+
+            <li data-toggle="collapse" data-target="#navigationModes" class="collapsed">
+              <a>Navigation modes<span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu" id="navigationModes" [ngClass]="{ 'collapse': !isInFunction('navigation-mode') }">
+              <li routerLink="/navigation-mode/strict" routerLinkActive="active">
+                <a>Strict navigation mode (Default)</a>
+              </li>
+              <li routerLink="/navigation-mode/semi-strict" routerLinkActive="active">
+                <a>Semi-strict navigation mode</a>
+              </li>
+              <li routerLink="/navigation-mode/free" routerLinkActive="active">
+                <a>Free navigation mode</a>
               </li>
             </ul>
 
@@ -94,6 +112,10 @@
 
             <li routerLink="/optional-steps" routerLinkActive="active">
               <a>Optional steps</a>
+            </li>
+
+            <li routerLink="/default-step-index" routerLinkActive="active">
+              <a>Default wizard step / Initial wizard step</a>
             </li>
 
             <li routerLink="/arbitrary-step-navigation" routerLinkActive="active">
@@ -116,7 +138,7 @@
         <router-outlet></router-outlet>
       </div>
       <footer>
-        This demo uses ng2-archwizard version 1.7.0
+        This demo uses ng2-archwizard version 2.0.0
       </footer>
     </div>
   </div>
