--- a/src/app/optional-steps/optional-steps.component.html
+++ b/src/app/optional-steps/optional-steps.component.html
@@ -1,5 +1,5 @@
 <wizard #wizard>
-  <wizard-step title="Steptitle 1">
+  <wizard-step stepTitle="Steptitle 1">
     <div class="centered-content">
       <div>
         Content: Step 1
@@ -11,7 +11,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 2" optionalStep>
+  <wizard-step stepTitle="Steptitle 2" optionalStep>
     <div class="centered-content">
       <div>
         Content: Optional Step 2
@@ -23,7 +23,7 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-step title="Steptitle 3">
+  <wizard-step stepTitle="Steptitle 3">
     <div class="centered-content">
       <div>
         Content: Step 3
@@ -35,14 +35,14 @@
       </div>
     </div>
   </wizard-step>
-  <wizard-completion-step title="Completion steptitle">
+  <wizard-completion-step stepTitle="Completion steptitle">
     <div class="centered-content">
       <div>
         Content: Completion Step
       </div>
 
       <div class="btn-group">
-        <button type="button" class="btn btn-secondary" (click)="wizard.reset()">Reset</button>
+        <button type="button" class="btn btn-secondary" resetWizard>Reset</button>
       </div>
     </div>
   </wizard-completion-step>
