Custom CSS demo

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -129,6 +129,10 @@
             <li routerLink="/reset-wizard" routerLinkActive="active">
               <a>Reset wizard</a>
             </li>
+
+            <li routerLink="/custom-css" routerLinkActive="active">
+              <a>Custom CSS</a>
+            </li>
           </ul>
         </div>
       </div>
