- add an example for the reversal of the steps in the navigation bar - rename selected to selectedStep

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -129,6 +129,10 @@
             <li routerLink="/reset-wizard" routerLinkActive="active">
               <a>Reset wizard</a>
             </li>
+
+            <li routerLink="/reversed-navigation-bar" routerLinkActive="active">
+              <a>Reversed navigation bar</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -138,7 +142,7 @@
         <router-outlet></router-outlet>
       </div>
       <footer>
-        This demo uses ng2-archwizard version 2.0.0
+        This demo uses ng2-archwizard version 2.1.0
       </footer>
     </div>
   </div>
