Code review updates for Using <wizard-step> with *ngFor

--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -134,8 +134,8 @@
               <a>Reversed navigation bar</a>
             </li>
 
-            <li routerLink="/fix-for-ngfor" routerLinkActive="active">
-              <a>Fix for ngFor</a>
+            <li routerLink="/wizard-step-ngfor" routerLinkActive="active">
+              <a>Wizard stept with *ngFor</a>
             </li>
           </ul>
         </div>
