--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -133,6 +133,10 @@
             <li routerLink="/reversed-navigation-bar" routerLinkActive="active">
               <a>Reversed navigation bar</a>
             </li>
+
+            <li routerLink="/wizard-step-ngfor" routerLinkActive="active">
+              <a>Wizard stept with *ngFor</a>
+            </li>
           </ul>
         </div>
       </div>
